--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -1,6 +1,63 @@
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: "Circular";
 }
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 0.8rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(97, 97, 97);
+}
+
+#side-scroll {
+  overflow-y: scroll;
+  max-height: 60vh;
+}
+
+.custom-padding {
+  padding-bottom: 8rem;
+}
+
+.sideIconsRx {
+  color: #585858;
+}
+
+.siderbarRx {
+  height: 100vh;
+  background-color: rgb(19, 19, 19);
+}
+.custom-right-side {
+  padding: 0.5em !important;
+  font-size: 0.8em;
+}
+.siderbarRx .bg-black {
+  height: 100%;
+}
+.bg-black2 {
+  background-color: rgb(19, 19, 19);
+}
+h3 {
+  color: white;
+  font-size: 1.2em;
+}
+
+.imgFriends1 {
+  border-radius: 20px;
+}
+
+#side-scroll ul > li {
+  list-style-type: none;
+}
+#side-scroll a {
+  text-decoration: none;
+}
+
 nav ul > li {
   list-style-type: none;
 }
@@ -13,4 +70,24 @@ nav i {
   margin-right: 0.5rem;
   vertical-align: middle;
   font-size: 1.4rem;
+}
+
+#play-bar {
+  height: 139px;
+  background-color: rgb(19, 19, 19);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 55%,
+    rgba(49, 36, 36, 0) 100%
+  );
+}
+
+i {
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  #play-bar {
+    background-color: rgb(19, 19, 19);
+  }
 }
