--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -6,8 +6,44 @@
   }
 }
 
-#mainCenter {
+#MainContentAlbum {
   overflow-y: scroll;
-  max-height: 55vh;
   overflow-x: hidden;
+  max-height: 94vh;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: #212b3c;
+}
+
+.sticky1 {
+  position: sticky;
+  top: 0;
+  z-index: 1001;
+  background-color: #283851;
+
+  /* padding-bottom: 1rem; */
+}
+
+.barraUtente {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative; /* Assicurati che la barra utente sia posizionata relativamente */
+}
+
+.title-album-fixed {
+  display: none; /* Nascondi il titolo fisso inizialmente */
+  position: absolute; /* Posizionamento assoluto all'interno della barra */
+  left: 50%; /* Centrare rispetto alla barra utente */
+  transform: translateX(-50%); /* Centra esattamente */
+  white-space: nowrap; /* Evita a capo nel testo */
+  color: white; /* Assicurati che il colore sia visibile sullo sfondo */
+}
+
+.title-album-fixed.show {
+  display: block; /* Mostra il titolo quando necessario */
 }
