--- a/assets/css/home_style.css
+++ b/assets/css/home_style.css
@@ -2,51 +2,159 @@ body {
   font-family: "Circular";
 }
 
-.list-group-item {
-  display: flex;
-  align-items: center;
-  border: 0px;
+html {
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
-.list-group-item img {
-  filter: invert(1);
-}
-.scrollable-block {
-  max-height: 49vh;
-  overflow-y: auto;
-}
-.side-title {
-  display: flex;
-  justify-content: space-between;
 
-  .icon {
-    display: flex;
+.bg-black2 {
+  background-color: rgb(19, 19, 19);
+}
+
+/* NAVBAR SINISTRA */
+
+nav ul > li {
+  list-style-type: none;
+}
+nav a {
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+nav i {
+  margin-right: 0.5rem;
+  vertical-align: middle;
+  font-size: 1.4rem;
+}
+.nav-link {
+  font-size: 13px;
+}
+
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 0.7rem;
+  height: 0.2rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(97, 97, 97);
+}
+
+#side-scroll {
+  overflow-y: scroll;
+  max-height: 76vh;
+}
+
+#side-scroll ul > li {
+  list-style-type: none;
+}
+#side-scroll a,
+a {
+  text-decoration: none;
+  color: white;
+}
+
+/* PARTE DESTRA */
+
+.sideIconsRx {
+  color: #585858;
+}
+
+.siderbarRx {
+  height: 100vh;
+  background-color: rgb(19, 19, 19);
+}
+.custom-right-side {
+  padding: 0.5em !important;
+  font-size: 0.8em;
+}
+.siderbarRx .bg-black {
+  height: 100%;
+}
+
+.imgFriends1 {
+  border-radius: 20px;
+}
+
+/* PLAYERBAR */
+
+#play-bar {
+  height: 90px;
+  background-color: rgb(19, 19, 19);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 55%,
+    rgba(49, 36, 36, 0) 100%
+  );
+}
+
+@media screen and (min-width: 768px) {
+  #player-bar {
+    background-color: rgb(19, 19, 19);
+  }
+}
+.progress {
+  height: 3px;
+
+  .progress-bar {
+    color: white;
   }
 }
 
-/* AGGIUNTO */
+/* MAIN */
+
+#main-scroll {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 92vh;
+  background: linear-gradient(
+    0deg,
+    hsl(0deg 0% 7% / 42%) 0%,
+    hsl(210deg 11% 15% / 69%) 85%
+  );
+}
 
 .custom_bg {
   background: linear-gradient(11deg, black, transparent, transparent);
 }
 
-.playIt {
+.playlist_wrap {
+  cursor: pointer;
+}
+
+.playlist_wrap:hover {
+  background-color: rgb(97, 97, 97);
+  .p_playlist {
+    display: inline;
+  }
+}
+
+.p_playlist {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  right: 10px;
+  font-size: 50px;
   display: none;
-  color: black;
-  height: 15px;
-  width: 15px;
+}
+
+.playIt {
+  right: 5px;
+  bottom: -5px;
+  display: none;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .card_wrap {
   padding: 7px;
   /* background-color: #33393f99; */
-  border-radius: 5px;
+  border-radius: 10px;
   .image_wrap {
-    position: relative;
     img {
-      border-radius: 5px;
+      border-radius: 10px;
+      object-fit: fill;
     }
   }
 }
@@ -89,4 +197,8 @@ footer {
 
 .bg_two {
   background-color: #33393f99;
+}
+
+.play_color {
+  color: #1ed760;
 }
