--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -89,10 +89,10 @@
   color: #868686;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   #play-bar {
     flex-direction: column;
     align-items: stretch;
     padding: 5px;
   }
-}
+} */
