--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -251,10 +251,10 @@ h3 {
   border: none;
 }
 .bi.bi-play-fill {
-  background-color: green;
+  background-color: #1ed760;
   border-radius: 50%;
   padding: 10px;
 }
 .cuoreAbsolute.rounded-circle {
-  background-color: green;
+  background-color: #1ed760;
 }
