--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -86,5 +86,14 @@
 .play-btn:hover,
 .next-btn:hover,
 .previous-btn:hover {
-  color: #868686;
+  color: #141414;
+}
+
+.bg-spotify {
+  background-color: #121212;
+}
+.song-fixed-player {
+  left: 16px;
+  bottom: 90px;
+  width: 94vw;
 }
