--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -153,3 +153,20 @@ body {
 h2 {
   font-size: x-large;
 }
+
+/*** PLAYER BAR ***/
+.progress-bar-container {
+  width: 100%;
+  height: 10px;
+  background-color: #333;
+  position: absolute;
+  left: 0;
+  bottom: -1vh;
+  cursor: pointer;
+}
+
+.progress-bar {
+  width: 0;
+  height: 100%;
+  background-color: #1db954;
+}
