--- a/assets/css/home_style.css
+++ b/assets/css/home_style.css
@@ -83,7 +83,12 @@ a {
 #player-bar {
   height: 90px;
   background-color: rgb(19, 19, 19);
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 55%, rgba(49, 36, 36, 0) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 55%,
+    rgba(49, 36, 36, 0) 100%
+  );
 }
 
 @media screen and (min-width: 768px) {
@@ -99,13 +104,26 @@ a {
   }
 }
 
+.bg-spotify {
+  background-color: #121212;
+}
+.song-fixed-player {
+  left: 16px;
+  bottom: 90px;
+  width: 94vw;
+}
+
 /* MAIN */
 
 #main-scroll {
   overflow-y: scroll;
   overflow-x: hidden;
   max-height: 92vh;
-  background: linear-gradient(0deg, hsl(0deg 0% 7% / 42%) 0%, hsl(210deg 11% 15% / 69%) 85%);
+  background: linear-gradient(
+    0deg,
+    hsl(0deg 0% 7% / 42%) 0%,
+    hsl(210deg 11% 15% / 69%) 85%
+  );
 }
 
 /* BARRA UTENTE */
