--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -94,7 +94,11 @@ nav i {
   overflow-y: scroll;
   overflow-x: hidden;
   max-height: 92vh;
-  background: linear-gradient(0deg, hsl(0deg 0% 7% / 42%) 0%, hsl(210deg 11% 15% / 69%) 85%);
+  background: linear-gradient(
+    0deg,
+    hsl(0deg 0% 7% / 42%) 0%,
+    hsl(210deg 11% 15% / 69%) 85%
+  );
 }
 h3 {
   color: white;
@@ -219,17 +223,22 @@ h3 {
 #player-bar {
   height: 90px;
   background-color: rgb(19, 19, 19);
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 55%, rgba(49, 36, 36, 0) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 55%,
+    rgba(49, 36, 36, 0) 100%
+  );
 }
 
 @media screen and (min-width: 768px) {
   #player-bar {
-    #player-bar {
-      background-color: rgb(19, 19, 19);
-    }
+    background-color: rgb(19, 19, 19);
   }
-  .progress {
-    height: 3px;
+}
+
+.progress {
+  height: 3px;
 
   .progress-bar {
     color: white;
@@ -273,4 +282,13 @@ h3 {
 }
 .cuoreAbsolute.rounded-circle {
   background-color: #1ed760;
+}
+
+.bg-spotify {
+  background-color: #121212;
+}
+.song-fixed-player {
+  left: 16px;
+  bottom: 90px;
+  width: 94vw;
 }
